--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=1.0&&type=webgl&ak=S5LmLvcsBG7XCL7ZBUXSD6K5H4oxUOA9"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
